--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -68,19 +68,8 @@ a {
 
 
 
-/* Responsive */
 
-*{
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-body {
-    background-color: #ECF0F1;
-    margin: 0px;
-}
-
-@media screen and (width < 480px) {
+/* @media screen and (width < 480px) {
     .nombregimnasio {
         display: none;
     }
@@ -132,4 +121,4 @@ body {
         gap: 50px;
         height: 250vh;
     }  
-}
+} */
