--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,18 @@
 @import "components/index";
 @import "components/miperfil";
 @import "components/rutinas";
+
+
+
+
+/* Responsive */
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+body {
+    background-color: #ECF0F1;
+    margin: 0px;
+}
