--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@
 @import "components/index";
 @import "components/miperfil";
 @import "components/rutinas";
+@import "components/responsive";
 
 
 
