--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -2,8 +2,146 @@
     header section p {
         display: none;
     }
-    section div .imagen-container img {
-        
-    }
+    
+    
+    
   }
-  
+
+
+@media (max-width: 1350px) {
+    .pag-inicio {
+        .img-izq , .img-der {
+            .imagen-container {
+                display: none;
+            }
+            
+        }
+    }
+}
+
+@media (max-width: 432px) {
+    header nav p {
+        font-size: 7px;
+    }
+    header div {
+        p {
+            font-size: 7px;
+        }
+        .img-perf-usuario {
+            border-style: solid;
+            border-color: nth($colores,3);
+            border-radius: 15px ;
+            width: 25px;
+            height: 25px;
+            overflow: hidden;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 432px) {
+    .planes1{
+        .plan-musc {
+            button {
+                border: 2px solid black;
+                border-radius: 15px;
+                text-align: center;
+                height: 75px;
+                width: 150px;
+                font-size: 18px;
+            }
+        }
+    }
+    
+}
+.pag-inicio {
+    .planes {
+        .planes1{
+            .plan-musc {
+                button {
+                    border: 2px solid black;
+                    border-radius: 15px;
+                    text-align: center;
+                    height: 40px;
+                    width: 80px;
+                    font-size: 7px;
+                }
+            }
+            .plan-squash {
+                button {
+                    border: 2px solid black;
+                    border-radius: 15px;
+                    text-align: center;
+                    height: 40px;
+                    width: 80px;
+                    font-size: 7px;
+                }
+            }
+        }
+        .planes2{
+            .plan-boxeo {
+                button {
+                    border: 2px solid black;
+                    border-radius: 15px;
+                    text-align: center;
+                    height: 40px;
+                    width: 80px;
+                    font-size: 7px;
+                }
+            }
+            .plan-muaythai {
+                button {
+                    border: 2px solid black;
+                    border-radius: 15px;
+                    text-align: center;
+                    height: 40px;
+                    width: 80px;
+                    font-size: 7px;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (max-width: 432px) {
+    footer {
+     .pestañas-footer {
+        display: none;
+     }
+
+     div {
+        width: 35px;
+        height: 35px;
+        border-radius: 35px;
+        border-style: solid;
+        border-color: #85c1e9;
+        overflow: hidden;
+        margin-right: 10px;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+     }
+     .redes-sociales {
+        
+        ul {
+            padding: 0px;
+            li {
+                div{
+                    display: none;
+                    img{
+                        display: none;
+                    }
+                }
+                a {
+                    font-size: 10px;
+                }
+            }
+        }
+     }
+    }
+}
