--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ div .horarios .horarios-texto {
   gap: 20px;
 }
 .pag-inicio .planes .planes1 .plan-musc button {
-  border: 2px solid black;
+  border: 2px solid gray;
   border-radius: 15px;
   text-align: center;
   height: 100px;
@@ -296,7 +296,7 @@ div .horarios .horarios-texto {
   gap: 20px;
 }
 .pag-inicio .planes .planes2 .plan-boxeo button {
-  border: 2px solid black;
+  border: 2px solid rgb(199, 44, 44);
   border-radius: 15px;
   text-align: center;
   height: 100px;
@@ -307,7 +307,7 @@ div .horarios .horarios-texto {
   background-color: #85c1e9;
 }
 .pag-inicio .planes .planes2 .plan-muaythai button {
-  border: 2px solid black;
+  border: 2px solid gold;
   border-radius: 15px;
   text-align: center;
   height: 100px;
@@ -462,39 +462,74 @@ h2 {
     font-size: 18px;
   }
 }
-.pag-inicio .planes .planes1 .plan-musc button {
-  border: 2px solid black;
-  border-radius: 15px;
-  text-align: center;
-  height: 40px;
-  width: 80px;
-  font-size: 7px;
+@media (max-width: 1350px) {
+  .pag-inicio .planes .planes1 .plan-musc button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 60px;
+    width: 100px;
+    font-size: 10px;
+  }
+  .pag-inicio .planes .planes1 .plan-squash button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 60px;
+    width: 100px;
+    font-size: 10px;
+  }
+  .pag-inicio .planes .planes2 .plan-boxeo button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 60px;
+    width: 100px;
+    font-size: 10px;
+  }
+  .pag-inicio .planes .planes2 .plan-muaythai button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 60px;
+    width: 100px;
+    font-size: 10px;
+  }
 }
-.pag-inicio .planes .planes1 .plan-squash button {
-  border: 2px solid black;
-  border-radius: 15px;
-  text-align: center;
-  height: 40px;
-  width: 80px;
-  font-size: 7px;
+@media (max-width: 432px) {
+  .pag-inicio .planes .planes1 .plan-musc button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 40px;
+    width: 80px;
+    font-size: 7px;
+  }
+  .pag-inicio .planes .planes1 .plan-squash button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 40px;
+    width: 80px;
+    font-size: 7px;
+  }
+  .pag-inicio .planes .planes2 .plan-boxeo button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 40px;
+    width: 80px;
+    font-size: 7px;
+  }
+  .pag-inicio .planes .planes2 .plan-muaythai button {
+    border: 2px solid black;
+    border-radius: 15px;
+    text-align: center;
+    height: 40px;
+    width: 80px;
+    font-size: 7px;
+  }
 }
-.pag-inicio .planes .planes2 .plan-boxeo button {
-  border: 2px solid black;
-  border-radius: 15px;
-  text-align: center;
-  height: 40px;
-  width: 80px;
-  font-size: 7px;
-}
-.pag-inicio .planes .planes2 .plan-muaythai button {
-  border: 2px solid black;
-  border-radius: 15px;
-  text-align: center;
-  height: 40px;
-  width: 80px;
-  font-size: 7px;
-}
-
 @media (max-width: 432px) {
   footer .pestañas-footer {
     display: none;
