--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -51,12 +51,7 @@
             gap: 20px; 
             .plan-musc {
                 button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 100px;
-                    width: 200px;
-                    font-size: 18px;
+                    @include botones-planes (2px solid gray,15px,100px,200px,18px)
                 }
                 button:hover {
                     background-color: nth($colores,3);
@@ -64,12 +59,7 @@
             }
             .plan-squash {
                 button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 100px;
-                    width: 200px;
-                    font-size: 18px;
+                    @include botones-planes (2px solid black,15px,100px,200px,18px)
                 }
                 button:hover {
                     background-color: nth($colores,3);
@@ -82,12 +72,7 @@
             gap: 20px; 
             .plan-boxeo {
                 button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 100px;
-                    width: 200px;
-                    font-size: 18px;
+                    @include botones-planes (2px solid rgb(199, 44, 44),15px,100px,200px,18px)
                 }
             
                 button:hover {
@@ -96,12 +81,7 @@
             }
             .plan-muaythai {
                 button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 100px;
-                    width: 200px;
-                    font-size: 18px;
+                    @include botones-planes (2px solid gold,15px,100px,200px,18px)
                 }
                 button:hover {
                     background-color: nth($colores,3);
