--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -57,55 +57,109 @@
     }
     
 }
-.pag-inicio {
-    .planes {
-        .planes1{
-            .plan-musc {
-                button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 40px;
-                    width: 80px;
-                    font-size: 7px;
+
+@media (max-width: 1350px) {
+    .pag-inicio {
+        .planes {
+            .planes1{
+                .plan-musc {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 60px;
+                        width: 100px;
+                        font-size: 10px;
+                    }
+                }
+                .plan-squash {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 60px;
+                        width: 100px;
+                        font-size: 10px;
+                    }
                 }
             }
-            .plan-squash {
-                button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 40px;
-                    width: 80px;
-                    font-size: 7px;
+            .planes2{
+                .plan-boxeo {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 60px;
+                        width: 100px;
+                        font-size: 10px;
+                    }
                 }
-            }
-        }
-        .planes2{
-            .plan-boxeo {
-                button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 40px;
-                    width: 80px;
-                    font-size: 7px;
-                }
-            }
-            .plan-muaythai {
-                button {
-                    border: 2px solid black;
-                    border-radius: 15px;
-                    text-align: center;
-                    height: 40px;
-                    width: 80px;
-                    font-size: 7px;
+                .plan-muaythai {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 60px;
+                        width: 100px;
+                        font-size: 10px;
+                    }
                 }
             }
         }
     }
-    
-}
+} 
+
+@media (max-width: 432px) {
+    .pag-inicio {
+        .planes {
+            .planes1{
+                .plan-musc {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 40px;
+                        width: 80px;
+                        font-size: 7px;
+                    }
+                }
+                .plan-squash {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 40px;
+                        width: 80px;
+                        font-size: 7px;
+                    }
+                }
+            }
+            .planes2{
+                .plan-boxeo {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 40px;
+                        width: 80px;
+                        font-size: 7px;
+                    }
+                }
+                .plan-muaythai {
+                    button {
+                        border: 2px solid black;
+                        border-radius: 15px;
+                        text-align: center;
+                        height: 40px;
+                        width: 80px;
+                        font-size: 7px;
+                    }
+                }
+            }
+        }
+    }
+} 
+
 
 @media (max-width: 432px) {
     footer {
