--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ h2 {
 }
 @media (max-width: 1350px) {
   .pag-inicio .planes .planes1 .plan-musc button {
-    border: 2px solid black;
+    border: 2px solid gray;
     border-radius: 15px;
     text-align: center;
     height: 60px;
@@ -480,7 +480,7 @@ h2 {
     font-size: 10px;
   }
   .pag-inicio .planes .planes2 .plan-boxeo button {
-    border: 2px solid black;
+    border: 2px solid rgb(199, 44, 44);
     border-radius: 15px;
     text-align: center;
     height: 60px;
@@ -488,7 +488,7 @@ h2 {
     font-size: 10px;
   }
   .pag-inicio .planes .planes2 .plan-muaythai button {
-    border: 2px solid black;
+    border: 2px solid gold;
     border-radius: 15px;
     text-align: center;
     height: 60px;
@@ -498,7 +498,7 @@ h2 {
 }
 @media (max-width: 432px) {
   .pag-inicio .planes .planes1 .plan-musc button {
-    border: 2px solid black;
+    border: 2px solid gray;
     border-radius: 15px;
     text-align: center;
     height: 40px;
@@ -514,7 +514,7 @@ h2 {
     font-size: 7px;
   }
   .pag-inicio .planes .planes2 .plan-boxeo button {
-    border: 2px solid black;
+    border: 2px solid rgb(199, 44, 44);
     border-radius: 15px;
     text-align: center;
     height: 40px;
@@ -522,7 +522,7 @@ h2 {
     font-size: 7px;
   }
   .pag-inicio .planes .planes2 .plan-muaythai button {
-    border: 2px solid black;
+    border: 2px solid gold;
     border-radius: 15px;
     text-align: center;
     height: 40px;
