--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -64,44 +64,24 @@
             .planes1{
                 .plan-musc {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 60px;
-                        width: 100px;
-                        font-size: 10px;
+                        @include botones-planes (2px solid gray,15px,60px,100px,10px)
                     }
                 }
                 .plan-squash {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 60px;
-                        width: 100px;
-                        font-size: 10px;
+                        @include botones-planes (2px solid black,15px,60px,100px,10px)
                     }
                 }
             }
             .planes2{
                 .plan-boxeo {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 60px;
-                        width: 100px;
-                        font-size: 10px;
+                        @include botones-planes (2px solid rgb(199, 44, 44),15px,60px,100px,10px)
                     }
                 }
                 .plan-muaythai {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 60px;
-                        width: 100px;
-                        font-size: 10px;
+                        @include botones-planes (2px solid gold,15px,60px,100px,10px)
                     }
                 }
             }
@@ -115,44 +95,24 @@
             .planes1{
                 .plan-musc {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 40px;
-                        width: 80px;
-                        font-size: 7px;
+                        @include botones-planes (2px solid gray,15px,40px,80px,7px)
                     }
                 }
                 .plan-squash {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 40px;
-                        width: 80px;
-                        font-size: 7px;
+                        @include botones-planes (2px solid black,15px,40px,80px,7px)
                     }
                 }
             }
             .planes2{
                 .plan-boxeo {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 40px;
-                        width: 80px;
-                        font-size: 7px;
+                        @include botones-planes (2px solid rgb(199, 44, 44),15px,40px,80px,7px)
                     }
                 }
                 .plan-muaythai {
                     button {
-                        border: 2px solid black;
-                        border-radius: 15px;
-                        text-align: center;
-                        height: 40px;
-                        width: 80px;
-                        font-size: 7px;
+                        @include botones-planes (2px solid gold,15px,40px,80px,7px)
                     }
                 }
             }
