creamos el extend img-full y lo importamos a los distintos partials

--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -1,16 +1,4 @@
-%flex-center {
-    display: flex;
-    align-items: center;
-}
-
-%flex-center-between {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-%flex-center-around {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+%img-full {
+    width: 100%;
+    height: 100%;
 }
