--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -22,8 +22,7 @@ header {
             height: 50px;
             overflow: hidden;
             img {
-                width: 100%;
-                height: 100%;
+                @extend %img-full;
             }
         }
     }
@@ -44,8 +43,7 @@ header {
             height: 50px;
             overflow: hidden;
             img {
-                width: 100%;
-                height: 100%;
+                @extend %img-full;
             }
         }
     }
