--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -35,8 +35,7 @@
             height: 300px;
             width: 300px;
             img {
-                width: 100%;
-                height: 100%;
+                @extend %img-full;
             }
         }
     }
@@ -100,8 +99,7 @@
             height: 300px;
             width: 300px;
             img {
-                width: 100%;
-                height: 100%;
+                @extend %img-full;
             }
         }
     }
