--- a/scss/components/_miperfil.scss
+++ b/scss/components/_miperfil.scss
@@ -15,8 +15,7 @@
 }
                                             
 .img-miniperfilhijo {
-    width: 100%;
-    height: 100%;
+    @extend %img-full;
 }
 
 h1 {
