--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -136,8 +136,7 @@
         overflow: hidden;
         margin-right: 10px;
                         img {
-                            width: 100%;
-                            height: 100%;
+                            @extend %img-full;
                         }
      }
      .redes-sociales {
